# TUfast-Eco-Interview

./: README.md
.github/workflows/: cpp-tests.yml  java-tests.yml  python-tests.yml
C++/Task_1/: CMakeLists.txt  sol.h  sol_test.cpp
C++/Task_2/: CMakeLists.txt  run_tests.sh  sol.h  sol_test.cpp
C++/Task_3/: CMakeLists.txt  sol.h  sol_test.cpp
Java/Task_1/: settings.gradle.kts
Java/Task_1/app/: build.gradle.kts
Java/Task_1/app/src/main/java/org/example/: Solution.java
Java/Task_1/app/src/test/java/org/example/: SolutionTest.java
Java/Task_2/: settings.gradle.kts
Java/Task_2/app/src/main/java/org/example/: Sol.java
Java/Task_2/app/src/test/java/org/example/: SolutionTest.java
Java/Task_3/: settings.gradle.kts
Java/Task_3/app/src/main/java/org/example/: Solution.java
Java/Task_3/app/src/test/java/org/example/: SolutionTest.java
Python/Task_1/: sol.py  test_sol.py
Python/Task_2/: sol.py  test_sol.py
Python/Task_3/: sol.py  test_sol.py
